[package]
name = "kraken-orders-rs"
version = "0.1.0"
authors = ["Dan <circa.1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full", "rt"] }
url = "2.0"
sha2 = "0.9.5"
data-encoding = "2"
hmac = "0.11"
